--- a/.env_docker
+++ b/.env_docker
@@ -1,3 +1,5 @@
 VITE_API_URL=http://localhost:4000/acme
 VITE_SOCKET_URL=ws://localhost:4000
 VITE_POLL_DELAY_MS=180000
+# ["disabled", "minimal", "verbose"]
+VITE_LOG_LEVEL=minimal
